@@ -12,7 +12,10 @@ Added ZRCP commands:
 -send-keys-event: simulates key press/release
 -test-tcp-connect: testing tcp connection
 
--Added Borland Gui Style
+Added Borland Gui Style
+
+Improved Debugging: 
+-added setting to dump .zsf snapshot when a cpu panic is fired
 
 Improved assembler: added defs command
 Improved AY Sheet: now you can select which AY Chip to show
@@ -21,6 +24,8 @@ Improved file selector: when asking for a directory, only shows directories, not
 Fixed f_seek call on esxdos handler
 Fixed segfault error when using breakpoints like peek/opcode in config file
 Fixed bug on zxuno changing video ram 5/7 when paging was disabled by bit DI7FFD
+
+
 
 Version 8.0. 19 July 2019 - World Destruction edition
 
